--- a/public/hiphop2012.html
+++ b/public/hiphop2012.html
@@ -185,7 +185,7 @@ d3.tsv("groupVC2012.tsv", type, function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Video Count");
+      .text("Total Video Num");
 
   svg2.selectAll(".bar")
       .data(data)
