--- a/public/hiphop2014.html
+++ b/public/hiphop2014.html
@@ -59,7 +59,7 @@ body {
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-<h2 align="center">Hiphop Dance Video Dislike/LikeCount Ratio Chart 2014</h2>
+<h2 align="center">Hiphop Dance Video Heuristic Value Chart 2014</h2>
 <script>
 
 var margin = {top: 40, right: 20, bottom: 30, left: 40},
